🐛FIX: disable zoom on iOS Safari

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -24,7 +24,7 @@ GLOBAL
 
     body {
         // prevent zoom-in on iOS Safari as meta tags are ignored
-        // touch-action: pan-y;
+        touch-action: pan-y;
     }
 }
 
